--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "convert-array-to-csv": "^2.0.0",
     "dotenv": "^16.4.7",
+    "fs": "^0.0.1-security",
     "octokit": "^4.1.0"
   }
 }
