--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
 		"convert-array-to-csv": "^2.0.0",
 		"csv-parser": "^3.1.0",
 		"dotenv": "^16.4.7",
+		"eld": "^1.0.1",
 		"fs": "^0.0.1-security",
+		"is-english": "^1.3.0",
+		"langcheck": "^2.3.2",
+		"languagedetect": "^2.0.0",
 		"octokit": "^4.1.0",
 		"parse-link-header": "^2.0.0"
 	}
